--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -28,7 +28,10 @@
 					<tbody>
 						<tr>
 							<th><div>ឈ្មោះបុគ្គលិក</div></th>
-							<td colspan="3"><div><input type="text" value="" name="" id="emp_name" placeholder="" required="required"></div></td>
+							<td colspan="3"><div>
+									<input type="text" value="" name="" id="emp_id" placeholder="" required="required">
+									<input type="text" value="" name="" id="emp_name" placeholder="" required="required">
+							</div></td>
 						</tr>					
 						<tr>
 							<th><div>ភេទ</div></th>
@@ -62,7 +65,7 @@
 				</table>
 			</div>
 			<!-- table input dot -->
-				<div class="tbl_input_pop">
+				<div class="tbl_input_pop" id="user_infor">
 					<table summary="">
 						<caption></caption>
 						<colgroup>
@@ -103,5 +106,120 @@
 	
 </div>
 <!-- //popup form -->
+<!-- popup form -->
+<div class="alert_wrap frm" id="popup_employee_edit" style="display:none;" th:fragment="popup_employee_edit">
+	<div class="alert_inner">
+		<div class="alert_tit">
+			<h1>កែប្រែពត័មានអ្នកប្រើប្រាស់</h1>
+			<a href="javascript:" class="btn_close"><span class="blind">close</span></a>
+		</div>
+		<div class="aler_cnt" style="height: auto !important;padding-bottom: 0px !important;">
+			<!-- table input popup -->
+			<div class="tbl_input_pop">
+				<table summary="">
+					<caption></caption>
+					<colgroup>
+					<col style="width:150px;">
+					<col>
+					<col>
+					<col>
+					</colgroup>
+					<tbody>
+						<tr>
+							<th><div>ឈ្មោះបុគ្គលិក</div></th>
+							<td colspan="3"><div>
+									<input type="hidden" value="" name="" id="emp_edit_id" placeholder="" required="required">
+									<input type="text" value="" name="" id="emp_edit_name" placeholder="" required="required">
+							</div></td>
+						</tr>					
+						<tr>
+							<th><div>ភេទ</div></th>
+							<td>
+								<div>
+									<label><input type="radio" id="edit_male" name="edit_gender" value="0" checked> ប្រុស</label> &nbsp;&nbsp;&nbsp;
+									<label><input type="radio" id="edit_female" name="edit_gender" value="1"> ស្រី</label>
+								</div>
+							</td>
+						</tr>
+						<tr style="display:;" id="">
+							<th><div>លេខទូរស័ព្ទ</div></th>
+							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_edit_phone" required="required"></div></td>
+						</tr>
+						<tr style="display:;" id="">
+							<th><div>អ៊ីមែល</div></th>
+							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_edit_email" required="required"></div></td>
+						</tr>
+						<tr style="display:;" id="">
+							<th><div>អាស័យដ្ឋាន</div></th>
+							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_edit_address" required="required"></div></td>
+						</tr>
+						<tr style="display:;" id="">
+							<th><div>រូបថត</div></th>
+							<td colspan="3"><div>
+								 <img alt="photo" id="edit_photo" th:src="@{/img/images/employee.png}" width="64" height="64"> 
+								<input type="file" name="edit_file" placeholder=""​​ id="edit_file">
+							</div></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+		</div>
+		<div class="t_line">
+			<a href="javascript:" class="btn_confirm" id="btn_edit">កែប្រែ</a>
+			<a href="javascript:" class="btn_cancel" >បោះបង់</a>
+		</div>
+	</div>	
+	
+</div>
+<!-- //popup form -->
+<!-- popup form -->
+<div class="alert_wrap frm" id="popup_employee_change_password" style="display:none;" th:fragment="popup_employee_change_password">
+	<div class="alert_inner">
+		<div class="alert_tit">
+			<h1>បញ្ចូលពត័មានអ្នកប្រើប្រាស់</h1>
+			<a href="javascript:" class="btn_close"><span class="blind">close</span></a>
+		</div>
+		<div class="aler_cnt" style="height: auto !important;padding-bottom: 0px !important;">			
+			<!-- table input dot -->
+				<div class="tbl_input_pop" id="user_infor">
+					<table summary="">
+						<caption></caption>
+						<colgroup>
+						<col style="width:150px;">
+						<col>
+						<col>
+						<col>
+					</colgroup>
+						<tbody>
+							<tr>
+								<th><div>ពាក្យសំងាត់ចាស់</div></th>
+								<td colspan="3"><div><input type="password" value="" name="password" id="p_password" placeholder="" required="required" style="width: 100%;"></div></td>
+								
+							</tr>
+							<tr>
+								<th><div>ពាក្យសំងាតថ្មី</div></th>
+								<td colspan="3"><div>
+									<input type="password" value="" name="confirm_password" id="p_new_password" placeholder="" required="required" style="width: 100%;">
+								</div></td>
+							</tr>
+							<tr>
+								<th><div>បញ្ជាក់ពាក្យសំងាតថ្មី</div></th>
+								<td colspan="3"><div>
+									<input type="password" value="" name="confirm_password" id="p_new_confirm_password" placeholder="" required="required" style="width: 100%;">
+								</div></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<!-- //table input dot -->				
+		</div>
+		<div class="t_line">
+			<a href="javascript:" class="btn_confirm" id="btn_save_password">បន្ថែម</a>
+			<a href="javascript:" class="btn_cancel" >បោះបង់</a>
+		</div>
+	</div>	
+	
+</div>
 </body>
 </html>
