--- a/khmoney/src/main/resources/templates/fragments/head.html
+++ b/khmoney/src/main/resources/templates/fragments/head.html
@@ -11,6 +11,7 @@
 		<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>		
 		<link rel="icon"       th:href="@{img/icon/loan.ico}">
 		<link rel="stylesheet" th:href="@{/css/reset.css}">
+		<link rel="stylesheet" th:href="@{/css/font-awesome/css/font-awesome.css}">
 		<link rel="stylesheet" th:href="@{/css/content.css}">
 		<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}">
 		<link rel="stylesheet" th:href="@{/css/jquery-confirm.min.css}">
