--- a/khmoney/src/main/resources/templates/layouts/layout.html
+++ b/khmoney/src/main/resources/templates/layouts/layout.html
@@ -145,7 +145,7 @@
 	<!-- //Container -->	
 	<div lang="en" th:replace="fragments/footer :: footer"> </div>	
 </div>
-
+<input type="hidden" id="user_id">
 <div lang="en" th:replace="fragments/assets :: assets"></div>
 <script th:src="@{/js/layout.js}"></script>
 <div layout:fragment="asset"></div>
