--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -34,8 +34,8 @@
 							<th><div>ភេទ</div></th>
 							<td>
 								<div>
-									<label><input type="radio" name="gender" value="0" checked> ប្រុស</label> &nbsp;&nbsp;&nbsp;
-									<label><input type="radio" name="gender" value="1"> ស្រី</label>
+									<label><input type="radio" id="male" name="gender" value="0" checked> ប្រុស</label> &nbsp;&nbsp;&nbsp;
+									<label><input type="radio" id="female" name="gender" value="1"> ស្រី</label>
 								</div>
 							</td>
 						</tr>
@@ -79,13 +79,13 @@
 							</tr>
 							<tr>
 								<th><div>ពាក្យសំងាត់</div></th>
-								<td colspan="3"><div><input type="password" value="" name="password" id="password" placeholder="" required="required"></div></td>
+								<td colspan="3"><div><input type="password" value="" name="password" id="password" placeholder="" required="required" style="width: 100%;"></div></td>
 								
 							</tr>
 							<tr>
 								<th><div>បញ្ជាក់ពាក្យសម្ងាត់</div></th>
 								<td colspan="3"><div>
-									<input type="password" value="" name="confirm_password" id="confirm_password" placeholder="" required="required">
+									<input type="password" value="" name="confirm_password" id="confirm_password" placeholder="" required="required" style="width: 100%;">
 								</div></td>
 							</tr>
 		
@@ -97,9 +97,10 @@
 		</div>
 		<div class="t_line">
 			<a href="javascript:" class="btn_confirm" id="btn_save">បន្ថែម</a>
-			<a href="javascript:" class="btn_cancel">បោះបង់</a>
+			<a href="javascript:" class="btn_cancel" >បោះបង់</a>
 		</div>
 	</div>	
+	
 </div>
 <!-- //popup form -->
 </body>
