--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -127,7 +127,8 @@
 					<tbody>
 						<tr>
 							<th><div>ឈ្មោះបុគ្គលិក</div></th>
-							<td colspan="3"><div>									
+							<td colspan="3"><div>	
+							  		<input type="hidden" value="" name="" id="emp_edit_id" placeholder="" required="required">						
 									<input type="text" value="" name="" id="emp_edit_name" placeholder="" required="required">
 							</div></td>
 						</tr>					
