--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -218,8 +218,50 @@
 			<a href="javascript:" class="btn_confirm" id="btn_save_password">បន្ថែម</a>
 			<a href="javascript:" class="btn_cancel" >បោះបង់</a>
 		</div>
-	</div>	
-	
+	</div>		
+</div>
+<!-- popup form -->
+<div class="alert_wrap frm" id="popup_employee_permission" style="display:none;" th:fragment="popup_employee_permission">
+	<div class="alert_inner">
+		<div class="alert_tit">
+			<h1>បញ្ចូលពត័មានអ្នកប្រើប្រាស់</h1>
+			<a href="javascript:" class="btn_close"><span class="blind">close</span></a>
+		</div>
+		<div class="aler_cnt" style="height: auto !important;padding-bottom: 0px !important;">			
+			<!-- table input dot -->
+				<div class="tbl_input_pop" id="user_infor">
+					<table summary="">
+						<caption></caption>
+						<colgroup>
+						<col style="width:150px;">
+						<col>
+						<col>
+						<col>
+					</colgroup>
+						<tbody>
+							<tr>
+								<th  colspan="3"><div>ពាក្យសំងាត់ចាស់</div></th>
+								<td><div>asa</div></td>
+								
+							</tr>
+							<tr>
+							<th  colspan="3"><div>ពាក្យសំងាត់ចាស់</div></th>
+								<td><div>asa</div></td>
+							</tr>
+							<tr>
+								<th  colspan="3"><div>ពាក្យសំងាត់ចាស់</div></th>
+								<td><div>asa</div></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<!-- //table input dot -->				
+		</div>
+		<div class="t_line">
+			<a href="javascript:" class="btn_confirm" id="btn_save_password">បន្ថែម</a>
+			<a href="javascript:" class="btn_cancel" >បោះបង់</a>
+		</div>
+	</div>		
 </div>
 </body>
 </html>
