--- a/khmoney/src/main/resources/templates/layouts/layout.html
+++ b/khmoney/src/main/resources/templates/layouts/layout.html
@@ -151,6 +151,7 @@
 <div layout:fragment="asset"></div>
 <div lang="en" th:replace="fragments/employeeAdd :: popup_employee_edit"></div>
 <div lang="en" th:replace="fragments/employeeAdd :: popup_employee_change_password"></div>
+<div lang="en" th:replace="fragments/employeeAdd :: popup_employee_permission"></div>
 <!-- loading.... -->
 <div style="display:none;" id="loading">
     <img th:src="@{/img/loading.gif}" alt="LAON" height="50" width="50">
