--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -240,17 +240,17 @@
 					</colgroup>
 						<tbody>
 							<tr>
-								<th  colspan="3"><div>ពាក្យសំងាត់ចាស់</div></th>
-								<td><div>asa</div></td>
+								<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
+								<td><div class="t_center">asa</div></td>
 								
 							</tr>
 							<tr>
-							<th  colspan="3"><div>ពាក្យសំងាត់ចាស់</div></th>
-								<td><div>asa</div></td>
+							<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
+								<td><div class="t_center">asa</div></td>
 							</tr>
 							<tr>
-								<th  colspan="3"><div>ពាក្យសំងាត់ចាស់</div></th>
-								<td><div>asa</div></td>
+								<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
+								<td><div class="t_center">asa</div></td>
 							</tr>
 						</tbody>
 					</table>
