--- a/khmoney/src/main/resources/templates/index.html
+++ b/khmoney/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
 								<span>បញ្ចីអ្នកខ្ចី</span>
 							</a></li>
 							
-							<li><a th:href="@{loan}">
+							<li><a th:href="@{/loan}">
 								<img alt="loaner" th:src="@{img/logo/money-icon.png}">
 								<span>បញ្ចីកម្ចី</span>
 							</a></li>
