--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -239,26 +239,14 @@
 						<col>
 					</colgroup>
 						<tbody>
-							<tr>
-								<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
-								<td><div class="t_center permission" style="height:20px;"></div></td>
-								
-							</tr>
-							<tr>
-							<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
-								<td><div class="t_center permission_on" style="height:20px;"></div></td>
-							</tr>
-							<tr>
-								<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
-								<td><div class="t_center permission" style="height:20px;"></div></td>
-							</tr>
+	
 						</tbody>
 					</table>
 				</div>
 				<!-- //table input dot -->				
 		</div>
 		<div class="t_line">
-			<a href="javascript:" class="btn_confirm" id="btn_save_password">បន្ថែម</a>
+			<a href="javascript:" class="btn_confirm" id="btn_save_permission">បន្ថែម</a>
 			<a href="javascript:" class="btn_cancel" >បោះបង់</a>
 		</div>
 	</div>		
