--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -229,7 +229,7 @@
 		</div>
 		<div class="aler_cnt" style="height: auto !important;padding-bottom: 0px !important;">			
 			<!-- table input dot -->
-				<div class="tbl_input_pop" id="user_infor">
+				<div class="tbl_lst1 mgt5" id="user_permission">
 					<table summary="">
 						<caption></caption>
 						<colgroup>
@@ -241,16 +241,16 @@
 						<tbody>
 							<tr>
 								<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
-								<td><div class="t_center">asa</div></td>
+								<td><div class="t_center permission" style="height:20px;"></div></td>
 								
 							</tr>
 							<tr>
 							<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
-								<td><div class="t_center">asa</div></td>
+								<td><div class="t_center permission_on" style="height:20px;"></div></td>
 							</tr>
 							<tr>
 								<th  colspan="3"><div class="t_left">ពាក្យសំងាត់ចាស់</div></th>
-								<td><div class="t_center">asa</div></td>
+								<td><div class="t_center permission" style="height:20px;"></div></td>
 							</tr>
 						</tbody>
 					</table>
