--- a/khmoney/src/main/resources/templates/loan-new.html
+++ b/khmoney/src/main/resources/templates/loan-new.html
@@ -98,11 +98,37 @@
 								<th><div>អត្ដសញ្ញាណប័ត្រ</div></th>
 								<td><div><input type="text"  value="" name="id_card" id="id_card" placeholder="" maxlength="11" onkeypress='return event.charCode >= 48 && event.charCode <= 57'></div></td>
 								<th><div>លេខទូរសព្ទ័</div></th>
-								<td colspan="4"><div><input type="text" value="" name="phone" id="phone" placeholder="" maxlength="12" onkeypress='return event.charCode >= 48 && event.charCode <= 57'></div></td>
+								<td colspan="3"><div><input type="text" value="" name="phone" id="phone" placeholder="" maxlength="12" onkeypress='return event.charCode >= 48 && event.charCode <= 57'></div></td>
 							</tr>
-							<tr>
+							<tr style="height:40px;">
 								<th><div>អាស័យដ្ឋាន</div></th>
-								<td colspan="6"><div><input type="text" value="" name="address" id="address" placeholder=""></div></td>
+								<td colspan="5"><div>
+													<select style="width:23%;"> 
+														<option>បង់ជា ថ្ងៃ</option>
+														<option>បង់ជា ១​ អាទិត្យ</option>
+														<option>បង់ជា ២ អាទិត្យ</option>
+														<option>បង់ជា​ ខែ</option>
+													</select>  &nbsp;~ &nbsp;
+													<select style="width:23%;"> 
+														<option>បង់ជា ថ្ងៃ</option>
+														<option>បង់ជា ១​ អាទិត្យ</option>
+														<option>បង់ជា ២ អាទិត្យ</option>
+														<option>បង់ជា​ ខែ</option>
+													</select>  &nbsp;~ &nbsp;
+													<select style="width:23%;"> 
+														<option>បង់ជា ថ្ងៃ</option>
+														<option>បង់ជា ១​ អាទិត្យ</option>
+														<option>បង់ជា ២ អាទិត្យ</option>
+														<option>បង់ជា​ ខែ</option>
+													</select>  &nbsp;~&nbsp;
+													<select style="width:23%;"> 
+														<option>បង់ជា ថ្ងៃ</option>
+														<option>បង់ជា ១​ អាទិត្យ</option>
+														<option>បង់ជា ២ អាទិត្យ</option>
+														<option>បង់ជា​ ខែ</option>
+													</select> 
+													
+								</div></td>
 							</tr>
 						</tbody>
 					</table>
