--- a/khmoney/src/main/resources/templates/fragments/popup_loan.html
+++ b/khmoney/src/main/resources/templates/fragments/popup_loan.html
@@ -23,7 +23,7 @@
 
 
 <!-- popup form -->
-<div class="alert_wrap frm" style="display:none;" th:fragment="popup_loan">
+<div class="alert_wrap frm" style="display:none;" th:fragment="popup_loan" id="popup_loan">
 	<div class="alert_inner">
 		<div class="alert_tit">
 			<h1>បញ្ចូលពត័មានទឹកប្រាក់</h1>
@@ -109,10 +109,7 @@
 							<th><div>ភ្នាក់ងារ</div></th>
 							<td><div>
 									<select style="width:;" name="popup_agent" id="popup_agent">
-										<option>បង់ជា ថ្ងៃ</option>
-										<option>បង់ជា ១​ អាទិត្យ</option>
-										<option>បង់ជា ២ អាទិត្យ</option>
-										<option>បង់ជា​ ខែ</option>
+								
 									</select>
 							</div></td>
 						</tr>
