--- a/khmoney/src/main/resources/templates/header.html
+++ b/khmoney/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<div class="header"  th:fragment="header" style="padding:0px !important;height: 45px;">
 		<div class="f_left cboth">
-			<h1 class="logo"><a th:href="@{/}"><img th:src="@{img/logo/piggy-bank.png}" alt="LAON"></a></h1>
+			<h1 class="logo"><a th:href="@{/}"><img src="/khmoney/img/logo/mortgage-loan.png" alt="LAON"></a></h1>
 		</div>
 		<div class="f_right" style="padding: 0px 25px 0 0 !important;font-family:'Khmer OS Battambang','Khmer OS Bokor', 'Khmer OS Content', 'hmer OS Siemreap', 'Khmer OS System' !important;font-size: 12px !important; box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;">
 		<ul class="navbar-right">
