--- a/khmoney/src/main/resources/templates/loan-view.html
+++ b/khmoney/src/main/resources/templates/loan-view.html
@@ -78,7 +78,7 @@
 							</tr>
 							<tr>
 								<th><div>អត្ដសញ្ញាណប័ត្រ</div></th>
-								<td><div><input type="text"  value="" name="id_card" id="id_card" placeholder="" maxlength="11" onkeypress='return event.charCode >= 48 && event.charCode <= 57'></div></td>
+								<td><div><input type="text"  value="" name="id_card" id="id_card" placeholder="" readonly="readonly" maxlength="11" onkeypress='return event.charCode >= 48 && event.charCode <= 57'></div></td>
 								<th><div>លេខទូរសព្ទ័</div></th>
 								<td colspan="4"><div><input type="text" value="" name="phone" id="phone" placeholder="" maxlength="12" readonly="readonly" onkeypress='return event.charCode >= 48 && event.charCode <= 57'></div></td>
 							</tr>
