--- a/khmoney/src/main/resources/static/css/content.css
+++ b/khmoney/src/main/resources/static/css/content.css
@@ -495,3 +495,85 @@ input{outline:0;}
  .tasks_wrap .report_menu ul li .misdb4 {background-image: url(../img/logo/Product-sale-report-icon.png);background-repeat: no-repeat; overflow: hidden;}
  .tasks_wrap .report_menu ul li .misdb5 {background-image: url(../img/logo/Sales-report-icon.png);background-repeat: no-repeat; overflow: hidden;}
  .tasks_wrap .report_menu ul li .thumb_txt {padding: 4px 0 1px 79px;vertical-align: top;color: #555;line-height: 16px;/* letter-spacing: -1px; */ text-align: justify;}
+ 
+ 	@charset "UTF-8";
+	/* Base Styles */
+	#cssmenu,
+	#cssmenu ul,
+	#cssmenu li,
+	#cssmenu a {
+	  margin: 0;
+	  padding: 0;
+	  border: 0;
+	  list-style: none;
+	  font-weight: normal;
+	  text-decoration: none;
+	  line-height: 1;
+	  font-family: 'Open Sans', sans-serif;
+	  font-size: 14px;
+	  position: relative;
+	  width: 250px;
+	}
+
+
+	#cssmenu > ul > li > a {
+	  font-size: 14px;
+	  display: block;
+	  border-bottom: 1px dashed #ba2f14;
+	}
+	#cssmenu > ul > li > a > span {
+	  display: block;
+	  padding: 12px 10px;
+	  -webkit-border-radius: 4px;
+	  -moz-border-radius: 4px;
+	  border-radius: 4px;
+	  padding-left:40px;
+	}
+	#cssmenu > ul > li > a:hover {
+	  text-decoration: none;
+	}
+	#cssmenu > ul > li.active {
+	  border-bottom: none;
+	}
+	#cssmenu > ul > li.has-sub > a span {
+	  background: url(../img/icon/plus-symbol.png) 1% center no-repeat;
+	}
+	#cssmenu > ul > li.has-sub.active > a span {
+	  background: url(../img/icon/minus-symbol.png) 1% center no-repeat;
+	}
+	/* Sub menu */
+	#cssmenu ul ul {
+	  display: none;
+	  background: #fff;
+	  border-right: 1px solid #a2a194;
+	  border-left: 1px solid #a2a194;
+	}
+	#cssmenu ul ul li {
+	  padding: 0;
+	  border-bottom: 1px solid #d4d4d4;
+	  border-top: none;
+	  background: #f7f7f7;
+	  background: -moz-linear-gradient(#f7f7f7 0%, #ececec 100%);
+	  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f7f7f7), color-stop(100%, #ececec));
+	  background: -webkit-linear-gradient(#f7f7f7 0%, #ececec 100%);
+	  background: linear-gradient(#f7f7f7 0%, #ececec 100%);
+	}
+	#cssmenu ul ul li:last-child {
+	  border-bottom: none;
+	}
+	#cssmenu ul ul a {
+	  padding: 10px 10px 10px 25px;
+	  display: block;
+	  color: #676767;
+	  font-size: 12px;
+	  font-weight: normal;
+	}
+	#cssmenu ul ul a:before {
+	  content: "»";
+	  position: absolute;
+	  left: 10px;
+	  color: #e94f31;
+	}
+	#cssmenu ul ul a:hover {
+	  color: #e94f31;
+	}
