--- a/khmoney/src/main/resources/templates/setting.html
+++ b/khmoney/src/main/resources/templates/setting.html
@@ -53,9 +53,9 @@
 				<div id="pay_constand" class="tabContents"></div>
 				<div id="pay_down" class="tabContents"></div>
 				<!-- //title_wrap -->
-				<div class="t_center mgt20" style="margin-bottom:50px;">
+				<!-- <div class="t_center mgt20" style="margin-bottom:50px;">
 					<a href="javascript:" class="btn_save" id="btn_save">បន្ថែមការកំណត់</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<!-- //content wrap -->
