--- a/khmoney/src/main/resources/templates/fragments/assets.html
+++ b/khmoney/src/main/resources/templates/fragments/assets.html
@@ -12,6 +12,7 @@
 	<script th:src="@{/js/lib/jquery-ui.min.js}"></script>
 	<script th:src="@{/js/lib/jquery-confirm.min.js}"></script>
 	<script th:src="@{/js/common/pagination.js}"></script>
+	<script th:src="@{/js/lib/jquery.printElement.min.js}"></script>
 	<script th:src="@{/js/common/Message.js}"></script>
 	
  </div>
